internal/octogo/testdata/import_dot.ogo
// ERROR "dot imports not supported"
import . "p"

const q = 'q'
